[project]
name="magiccdp"
authors = [
    {name="James Usevitch", email="james_usevitch@byu.edu"}
]
description="A set of differentiable programming tutorials for the BYU MAGICC Lab"
readme="README.md"
requires-python = ">=3.12"
# license = GPL?

dependencies = [
    "jupyterlab",
    "jax",
    "numpy",
    "scipy",
    "matplotlib",
]

dynamic = [
    "version",
]


[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "pyright",
    "mkdocs-material",
    "mkdocstrings[python]",
]

[build-system]
# AVOID CHANGING REQUIRES: IT WILL BE UPDATED BY PYSCAFFOLD!
requires = ["setuptools>=46.1.0", "setuptools_scm[toml]>=5"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# For smarter version schemes and other configuration options,
# check out https://github.com/pypa/setuptools_scm
version_scheme = "no-guess-dev"